@@ -725,8 +725,11 @@ case "$locale" in
     *_BY*)
 	default_layout=by  # Belarus
 	;;
-    *_CA*)
+    fr_CA*)
 	default_layout=ca  # Canada
+	;;
+    *_CA*)
+	default_layout=us  # U.S. English
 	;;
     fr_CH*)
 	default_layout=ch  # Switzerland
