@@ -3,6 +3,8 @@ console-setup (1.20) UNRELEASED; urgency=low
   [ Colin Watson ]
   * Set default model to pc105 on powerpc/ps3 and powerpc/cell systems.
   * Clean up the package description a little.
+  * Only default to Canadian layout for fr_CA; use U.S. English for other
+    *_CA locales (LP: #64418).
 
   [ Debconf templates translations ]
   * Belarusian. Closes: #447109
